# deadlock-hero-ability-statistics-image-extractor

./: .gitignore  README.md  pyproject.toml  tooltip_dataset.yaml
src/deadlock_hero_ability_statistics_image_extractor/: __init__.py  main.py  tooltip_detector.py  train_yolo.py  web_app.py
yolo_dataset/labels/: Screenshot 2025-09-10 220834.txt  Screenshot 2025-09-10 220845.txt  Screenshot 2025-09-10 220854.txt  Screenshot 2025-09-10 220902.txt  Screenshot 2025-09-10 220911.txt  Screenshot 2025-09-10 220919.txt  Screenshot 2025-09-10 220925.txt  Screenshot 2025-09-10 220933.txt  Screenshot 2025-09-10 220940.txt  Screenshot 2025-09-10 220950.txt  Screenshot 2025-09-10 220956.txt  Screenshot 2025-09-10 221002.txt  Screenshot 2025-09-10 221008.txt  Screenshot 2025-09-10 221015.txt  Screenshot 2025-09-10 221022.txt  Screenshot 2025-09-10 221031.txt  Screenshot 2025-09-10 221037.txt  Screenshot 2025-09-10 221044.txt  Screenshot 2025-09-10 221050.txt  Screenshot 2025-09-10 221057.txt  Screenshot 2025-09-10 221103.txt  Screenshot 2025-09-10 221109.txt  Screenshot 2025-09-10 221115.txt  Screenshot 2025-09-10 221121.txt  Screenshot 2025-09-10 221126.txt  Screenshot 2025-09-10 221132.txt  Screenshot 2025-09-10 221138.txt  Screenshot 2025-09-10 221143.txt  Screenshot 2025-09-10 221152.txt  Screenshot 2025-09-10 221157.txt  Screenshot 2025-09-10 221204.txt  Screenshot 2025-09-10 221210.txt  Screenshot 2025-09-11 154217.txt  Screenshot 2025-09-11 154249.txt  Screenshot 2025-09-11 154300.txt  Screenshot 2025-09-11 154310.txt  Screenshot 2025-09-11 154316.txt  (+27 more)
(+4 files in other folders)
